# Pacman_clone

./: CMakeLists.txt  README.md  main.cpp
Game_logic/: World.cpp  World.h
Game_logic/AbstractFactory/: AbstractFactory.h
Game_logic/Entities/: EntityModel.cpp  EntityModel.h
Game_logic/Entities/Collectable/: Collectable.cpp  Collectable.h
Game_logic/Entities/Ghost/: Ghost.cpp  Ghost.h
Game_logic/Entities/PacMan/: PacMan.cpp  PacMan.h  PacmanMovement.cpp  PacmanMovement.h
Game_logic/Entities/VoidCell/: VoidCell.cpp  VoidCell.h
Game_logic/Entities/Wall/: Wall.cpp  Wall.h
Game_logic/Ghost_AI/: Ghost_AI.cpp  Ghost_AI.h
Game_logic/Observer/: Observer.h  Subject.h
Game_logic/Score/: Score.cpp  Score.h
Game_logic/Utils/: Map.json  Position.h  Random.h  Stopwatch.h  Utils.cpp  Utils.h  json.hpp
Game_representation/: Game.cpp  Game.h
Game_representation/Camera/: Camera.h
Game_representation/Concrete_factory/: EntityFactory.cpp  EntityFactory.h
Game_representation/Entities/: EntityView.cpp  EntityView.h
Game_representation/Entities/Collectale/: Collectable_v.cpp  Collectable_v.h
Game_representation/Entities/Ghost/: Ghost_v.cpp  Ghost_v.h
Game_representation/Entities/PacMan/: PacMan_v.cpp  PacMan_v.h
Game_representation/Entities/VoidCell/: VoidCell_v.cpp  VoidCell_v.h
Game_representation/Entities/Wall/: Wall_v.cpp  Wall_v.h
Game_representation/StateManager/: StateManager.cpp  StateManager.h
Game_representation/States/: States.cpp  States.h
Game_representation/Utils/: Window.h
